Newline characters in pasted text are not counted correctly for textarea[maxlength].

HTMLTextAreaElement::sanitizeUserInputValue didn't take care of LF->CRLF conversion.

BUG=592448

Review URL: https://codereview.chromium.org/1846913005

Cr-Commit-Position: refs/heads/master@{#384508}

Former-commit-id: ddcf7881eed02133eac48444d0dec01eeae86438